[gd_scene load_steps=14 format=2]

[ext_resource path="res://mesh/exporter.dae" type="PackedScene" id=1]
[ext_resource path="res://scripts/exporter.gd" type="Script" id=2]
[ext_resource path="res://gray_mat.tres" type="Material" id=3]
[ext_resource path="res://assets/sell.png" type="Texture" id=4]
[ext_resource path="res://glass.tres" type="Material" id=5]

[sub_resource type="ConvexPolygonShape" id=1]

points = PoolVector3Array( 1, -1, 1, -0.999512, -1, -1, 1, -1, -0.999512, -0.999512, 1, -1, 0.999512, 1, 1, 1, 1, -0.999512, 1, 1, -0.999512, 1, -1, 1, 1, -1, -0.999512, 0.999512, 1, 1, -1, -1, 0.999512, 1, -1, 1, -1, -1, 0.999512, -0.999512, 1, -1, -0.999512, -1, -1, 1, -1, -0.999512, -0.999512, 1, -1, 1, 1, -0.999512, -1, -1, 0.999512, -1, 1, 0.999512, 0.999512, 1, 1, -1, 1, 0.999512, -1, 1, 0.999512, -0.999512, -1, -1 )

[sub_resource type="ConvexPolygonShape" id=2]

points = PoolVector3Array( -1, 1, 2.81836, -1, -1, -1, -1, -1, 2.81836, -1, 1, -1, 1, -1, -1, -1, -1, -1, 1, 1, -1, 1, -1, 2.81836, 1, -1, -1, 1, 1, 2.81836, -1, -1, 2.81836, 1, -1, 2.81836, 1, -1, -1, -1, -1, 2.81836, -1, -1, -1, -1, 1, -1, 1, 1, 2.81836, 1, 1, -1, -1, 1, -1, 1, 1, -1, 1, 1, 2.81836, -1, 1, 2.81836, 1, -1, 2.81836, -1, 1, 2.81836 )

[sub_resource type="SpatialMaterial" id=8]

flags_transparent = false
flags_unshaded = false
flags_on_top = false
flags_use_point_size = false
flags_fixed_size = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
albedo_color = Color( 0.7, 0.7, 0.7, 1 )
albedo_texture = ExtResource( 4 )
specular_mode = 0
specular_color = Color( 0.1, 0.1, 0.1, 1 )
specular_metalness = 0.1
specular_roughness = 0.0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
height_enabled = false
subsurf_scatter_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector2( 1, 1 )
uv1_offset = Vector2( 0, 0 )
uv2_scale = Vector2( 1, 1 )
uv2_offset = Vector2( 0, 0 )

[sub_resource type="ConvexPolygonShape" id=3]

points = PoolVector3Array( 0, 1, -1, 0.195068, -1, -0.980469, 0, -1, -1, 0.195068, 1, -0.980469, 0.382568, -1, -0.923828, 0.195068, -1, -0.980469, 0.382568, 1, -0.923828, 0.555176, -1, -0.831055, 0.382568, -1, -0.923828, 0.555176, 1, -0.831055, 0.707031, -1, -0.707031, 0.555176, -1, -0.831055, 0.707031, 1, -0.707031, 0.831055, -1, -0.555176, 0.707031, -1, -0.707031, 0.831055, 1, -0.555176, 0.923828, -1, -0.382568, 0.831055, -1, -0.555176, 0.923828, 1, -0.382568, 0.980469, -1, -0.195068, 0.923828, -1, -0.382568, 0.980469, 1, -0.195068, 1, -1, 0, 0.980469, -1, -0.195068, 1, 1, 0, 0.980469, -1, 0.195068, 1, -1, 0, 0.980469, 1, 0.195068, 0.923828, -1, 0.382568, 0.980469, -1, 0.195068, 0.923828, 1, 0.382568, 0.831055, -1, 0.555176, 0.923828, -1, 0.382568, 0.831055, 1, 0.555176, 0.707031, -1, 0.707031, 0.831055, -1, 0.555176, 0.707031, 1, 0.707031, 0.555176, -1, 0.831055, 0.707031, -1, 0.707031, 0.555176, 1, 0.831055, 0.382568, -1, 0.923828, 0.555176, -1, 0.831055, 0.382568, 1, 0.923828, 0.195068, -1, 0.980469, 0.382568, -1, 0.923828, 0.195068, 1, 0.980469, 0, -1, 1, 0.195068, -1, 0.980469, 0, 1, 1, -0.195068, -1, 0.980469, 0, -1, 1, -0.195068, 1, 0.980469, -0.382568, -1, 0.923828, -0.195068, -1, 0.980469, -0.382568, 1, 0.923828, -0.555176, -1, 0.831055, -0.382568, -1, 0.923828, -0.555176, 1, 0.831055, -0.707031, -1, 0.707031, -0.555176, -1, 0.831055, -0.707031, 1, 0.707031, -0.831055, -1, 0.555176, -0.707031, -1, 0.707031, -0.831055, 1, 0.555176, -0.923828, -1, 0.382568, -0.831055, -1, 0.555176, -0.923828, 1, 0.382568, -0.980469, -1, 0.195068, -0.923828, -1, 0.382568, -0.980469, 1, 0.195068, -1, -1, 0, -0.980469, -1, 0.195068, -1, 1, 0, -0.980469, -1, -0.195068, -1, -1, 0, -0.980469, 1, -0.195068, -0.923828, -1, -0.382568, -0.980469, -1, -0.195068, -0.923828, 1, -0.382568, -0.831055, -1, -0.555176, -0.923828, -1, -0.382568, -0.831055, 1, -0.555176, -0.707031, -1, -0.707031, -0.831055, -1, -0.555176, -0.707031, 1, -0.707031, -0.555176, -1, -0.831055, -0.707031, -1, -0.707031, -0.555176, 1, -0.831055, -0.382568, -1, -0.923828, -0.555176, -1, -0.831055, -0.382568, 1, 0.923828, 0.923828, 1, 0.382568, -0.923828, 1, -0.382568, -0.382568, 1, -0.923828, -0.195068, -1, -0.980469, -0.382568, -1, -0.923828, -0.195068, 1, -0.980469, 0, -1, -1, -0.195068, -1, -0.980469, 0.195068, -1, 0.980469, -0.980469, -1, 0.195068, 0.980469, -1, -0.195068, 0.195068, 1, -0.980469, 0.382568, 1, -0.923828, 0.555176, 1, -0.831055, 0.707031, 1, -0.707031, 0.831055, 1, -0.555176, 0.923828, 1, -0.382568, 0.980469, 1, -0.195068, 1, 1, 0, 0.980469, 1, 0.195068, 0.923828, 1, 0.382568, 0.831055, 1, 0.555176, 0.707031, 1, 0.707031, 0.555176, 1, 0.831055, 0.382568, 1, 0.923828, 0.195068, 1, 0.980469, 0, 1, 1, -0.195068, 1, 0.980469, -0.382568, 1, 0.923828, -0.555176, 1, 0.831055, -0.707031, 1, 0.707031, -0.831055, 1, 0.555176, -0.923828, 1, 0.382568, -0.980469, 1, 0.195068, -1, 1, 0, -0.980469, 1, -0.195068, -0.923828, 1, -0.382568, -0.831055, 1, -0.555176, -0.707031, 1, -0.707031, -0.555176, 1, -0.831055, -0.382568, 1, -0.923828, 0.382568, 1, -0.923828, 0.195068, 1, -0.980469, 0, 1, -1, -0.195068, 1, -0.980469, -0.382568, 1, -0.923828, -0.555176, 1, -0.831055, -0.707031, 1, -0.707031, -0.831055, 1, -0.555176, -0.980469, 1, -0.195068, -1, 1, 0, -0.980469, 1, 0.195068, -0.923828, 1, 0.382568, -0.831055, 1, 0.555176, -0.707031, 1, 0.707031, -0.555176, 1, 0.831055, -0.195068, 1, 0.980469, 0, 1, 1, 0.195068, 1, 0.980469, 0.382568, 1, 0.923828, 0.555176, 1, 0.831055, 0.707031, 1, 0.707031, 0.831055, 1, 0.555176, 0.980469, 1, 0.195068, 1, 1, 0, 0.980469, 1, -0.195068, 0.923828, 1, -0.382568, 0.831055, 1, -0.555176, 0.707031, 1, -0.707031, 0.555176, 1, -0.831055, -0.195068, 1, -0.980469, 0, 1, -1, -0.195068, -1, -0.980469, 0, -1, -1, 0.195068, -1, -0.980469, 0.382568, -1, -0.923828, 0.555176, -1, -0.831055, 0.707031, -1, -0.707031, 0.831055, -1, -0.555176, 0.923828, -1, -0.382568, 1, -1, 0, 0.980469, -1, 0.195068, 0.923828, -1, 0.382568, 0.831055, -1, 0.555176, 0.707031, -1, 0.707031, 0.555176, -1, 0.831055, 0.382568, -1, 0.923828, 0, -1, 1, -0.195068, -1, 0.980469, -0.382568, -1, 0.923828, -0.555176, -1, 0.831055, -0.707031, -1, 0.707031, -0.831055, -1, 0.555176, -0.923828, -1, 0.382568, -1, -1, 0, -0.980469, -1, -0.195068, -0.923828, -1, -0.382568, -0.831055, -1, -0.555176, -0.707031, -1, -0.707031, -0.555176, -1, -0.831055, -0.382568, -1, -0.923828 )

[sub_resource type="ConvexPolygonShape" id=4]

points = PoolVector3Array( 0, 1, -1, 0.195068, -1, -0.980469, 0, -1, -1, 0.195068, 1, -0.980469, 0.382568, -1, -0.923828, 0.195068, -1, -0.980469, 0.382568, 1, -0.923828, 0.555176, -1, -0.831055, 0.382568, -1, -0.923828, 0.555176, 1, -0.831055, 0.707031, -1, -0.707031, 0.555176, -1, -0.831055, 0.707031, 1, -0.707031, 0.831055, -1, -0.555176, 0.707031, -1, -0.707031, 0.831055, 1, -0.555176, 0.923828, -1, -0.382568, 0.831055, -1, -0.555176, 0.923828, 1, -0.382568, 0.980469, -1, -0.195068, 0.923828, -1, -0.382568, 0.980469, 1, -0.195068, 1, -1, 0, 0.980469, -1, -0.195068, 1, 1, 0, 0.980469, -1, 0.195068, 1, -1, 0, 0.980469, 1, 0.195068, 0.923828, -1, 0.382568, 0.980469, -1, 0.195068, 0.923828, 1, 0.382568, 0.831055, -1, 0.555176, 0.923828, -1, 0.382568, 0.831055, 1, 0.555176, 0.707031, -1, 0.707031, 0.831055, -1, 0.555176, 0.707031, 1, 0.707031, 0.555176, -1, 0.831055, 0.707031, -1, 0.707031, 0.555176, 1, 0.831055, 0.382568, -1, 0.923828, 0.555176, -1, 0.831055, 0.382568, 1, 0.923828, 0.195068, -1, 0.980469, 0.382568, -1, 0.923828, 0.195068, 1, 0.980469, 0, -1, 1, 0.195068, -1, 0.980469, 0, 1, 1, -0.195068, -1, 0.980469, 0, -1, 1, -0.195068, 1, 0.980469, -0.382568, -1, 0.923828, -0.195068, -1, 0.980469, -0.382568, 1, 0.923828, -0.555176, -1, 0.831055, -0.382568, -1, 0.923828, -0.555176, 1, 0.831055, -0.707031, -1, 0.707031, -0.555176, -1, 0.831055, -0.707031, 1, 0.707031, -0.831055, -1, 0.555176, -0.707031, -1, 0.707031, -0.831055, 1, 0.555176, -0.923828, -1, 0.382568, -0.831055, -1, 0.555176, -0.923828, 1, 0.382568, -0.980469, -1, 0.195068, -0.923828, -1, 0.382568, -0.980469, 1, 0.195068, -1, -1, 0, -0.980469, -1, 0.195068, -1, 1, 0, -0.980469, -1, -0.195068, -1, -1, 0, -0.980469, 1, -0.195068, -0.923828, -1, -0.382568, -0.980469, -1, -0.195068, -0.923828, 1, -0.382568, -0.831055, -1, -0.555176, -0.923828, -1, -0.382568, -0.831055, 1, -0.555176, -0.707031, -1, -0.707031, -0.831055, -1, -0.555176, -0.707031, 1, -0.707031, -0.555176, -1, -0.831055, -0.707031, -1, -0.707031, -0.555176, 1, -0.831055, -0.382568, -1, -0.923828, -0.555176, -1, -0.831055, -0.382568, 1, 0.923828, 0.923828, 1, 0.382568, -0.923828, 1, -0.382568, -0.382568, 1, -0.923828, -0.195068, -1, -0.980469, -0.382568, -1, -0.923828, -0.195068, 1, -0.980469, 0, -1, -1, -0.195068, -1, -0.980469, 0.195068, -1, 0.980469, -0.980469, -1, 0.195068, 0.980469, -1, -0.195068, 0.195068, 1, -0.980469, 0.382568, 1, -0.923828, 0.555176, 1, -0.831055, 0.707031, 1, -0.707031, 0.831055, 1, -0.555176, 0.923828, 1, -0.382568, 0.980469, 1, -0.195068, 1, 1, 0, 0.980469, 1, 0.195068, 0.923828, 1, 0.382568, 0.831055, 1, 0.555176, 0.707031, 1, 0.707031, 0.555176, 1, 0.831055, 0.382568, 1, 0.923828, 0.195068, 1, 0.980469, 0, 1, 1, -0.195068, 1, 0.980469, -0.382568, 1, 0.923828, -0.555176, 1, 0.831055, -0.707031, 1, 0.707031, -0.831055, 1, 0.555176, -0.923828, 1, 0.382568, -0.980469, 1, 0.195068, -1, 1, 0, -0.980469, 1, -0.195068, -0.923828, 1, -0.382568, -0.831055, 1, -0.555176, -0.707031, 1, -0.707031, -0.555176, 1, -0.831055, -0.382568, 1, -0.923828, 0.382568, 1, -0.923828, 0.195068, 1, -0.980469, 0, 1, -1, -0.195068, 1, -0.980469, -0.382568, 1, -0.923828, -0.555176, 1, -0.831055, -0.707031, 1, -0.707031, -0.831055, 1, -0.555176, -0.980469, 1, -0.195068, -1, 1, 0, -0.980469, 1, 0.195068, -0.923828, 1, 0.382568, -0.831055, 1, 0.555176, -0.707031, 1, 0.707031, -0.555176, 1, 0.831055, -0.195068, 1, 0.980469, 0, 1, 1, 0.195068, 1, 0.980469, 0.382568, 1, 0.923828, 0.555176, 1, 0.831055, 0.707031, 1, 0.707031, 0.831055, 1, 0.555176, 0.980469, 1, 0.195068, 1, 1, 0, 0.980469, 1, -0.195068, 0.923828, 1, -0.382568, 0.831055, 1, -0.555176, 0.707031, 1, -0.707031, 0.555176, 1, -0.831055, -0.195068, 1, -0.980469, 0, 1, -1, -0.195068, -1, -0.980469, 0, -1, -1, 0.195068, -1, -0.980469, 0.382568, -1, -0.923828, 0.555176, -1, -0.831055, 0.707031, -1, -0.707031, 0.831055, -1, -0.555176, 0.923828, -1, -0.382568, 1, -1, 0, 0.980469, -1, 0.195068, 0.923828, -1, 0.382568, 0.831055, -1, 0.555176, 0.707031, -1, 0.707031, 0.555176, -1, 0.831055, 0.382568, -1, 0.923828, 0, -1, 1, -0.195068, -1, 0.980469, -0.382568, -1, 0.923828, -0.555176, -1, 0.831055, -0.707031, -1, 0.707031, -0.831055, -1, 0.555176, -0.923828, -1, 0.382568, -1, -1, 0, -0.980469, -1, -0.195068, -0.923828, -1, -0.382568, -0.831055, -1, -0.555176, -0.707031, -1, -0.707031, -0.555176, -1, -0.831055, -0.382568, -1, -0.923828 )

[sub_resource type="ConvexPolygonShape" id=5]

points = PoolVector3Array( 0, 1, -1, 0.195068, -1, -0.980469, 0, -1, -1, 0.195068, 1, -0.980469, 0.382568, -1, -0.923828, 0.195068, -1, -0.980469, 0.382568, 1, -0.923828, 0.555176, -1, -0.831055, 0.382568, -1, -0.923828, 0.555176, 1, -0.831055, 0.707031, -1, -0.707031, 0.555176, -1, -0.831055, 0.707031, 1, -0.707031, 0.831055, -1, -0.555176, 0.707031, -1, -0.707031, 0.831055, 1, -0.555176, 0.923828, -1, -0.382568, 0.831055, -1, -0.555176, 0.923828, 1, -0.382568, 0.980469, -1, -0.195068, 0.923828, -1, -0.382568, 0.980469, 1, -0.195068, 1, -1, 0, 0.980469, -1, -0.195068, 1, 1, 0, 0.980469, -1, 0.195068, 1, -1, 0, 0.980469, 1, 0.195068, 0.923828, -1, 0.382568, 0.980469, -1, 0.195068, 0.923828, 1, 0.382568, 0.831055, -1, 0.555176, 0.923828, -1, 0.382568, 0.831055, 1, 0.555176, 0.707031, -1, 0.707031, 0.831055, -1, 0.555176, 0.707031, 1, 0.707031, 0.555176, -1, 0.831055, 0.707031, -1, 0.707031, 0.555176, 1, 0.831055, 0.382568, -1, 0.923828, 0.555176, -1, 0.831055, 0.382568, 1, 0.923828, 0.195068, -1, 0.980469, 0.382568, -1, 0.923828, 0.195068, 1, 0.980469, 0, -1, 1, 0.195068, -1, 0.980469, 0, 1, 1, -0.195068, -1, 0.980469, 0, -1, 1, -0.195068, 1, 0.980469, -0.382568, -1, 0.923828, -0.195068, -1, 0.980469, -0.382568, 1, 0.923828, -0.555176, -1, 0.831055, -0.382568, -1, 0.923828, -0.555176, 1, 0.831055, -0.707031, -1, 0.707031, -0.555176, -1, 0.831055, -0.707031, 1, 0.707031, -0.831055, -1, 0.555176, -0.707031, -1, 0.707031, -0.831055, 1, 0.555176, -0.923828, -1, 0.382568, -0.831055, -1, 0.555176, -0.923828, 1, 0.382568, -0.980469, -1, 0.195068, -0.923828, -1, 0.382568, -0.980469, 1, 0.195068, -1, -1, 0, -0.980469, -1, 0.195068, -1, 1, 0, -0.980469, -1, -0.195068, -1, -1, 0, -0.980469, 1, -0.195068, -0.923828, -1, -0.382568, -0.980469, -1, -0.195068, -0.923828, 1, -0.382568, -0.831055, -1, -0.555176, -0.923828, -1, -0.382568, -0.831055, 1, -0.555176, -0.707031, -1, -0.707031, -0.831055, -1, -0.555176, -0.707031, 1, -0.707031, -0.555176, -1, -0.831055, -0.707031, -1, -0.707031, -0.555176, 1, -0.831055, -0.382568, -1, -0.923828, -0.555176, -1, -0.831055, -0.382568, 1, 0.923828, 0.923828, 1, 0.382568, -0.923828, 1, -0.382568, -0.382568, 1, -0.923828, -0.195068, -1, -0.980469, -0.382568, -1, -0.923828, -0.195068, 1, -0.980469, 0, -1, -1, -0.195068, -1, -0.980469, 0.195068, -1, 0.980469, -0.980469, -1, 0.195068, 0.980469, -1, -0.195068, 0.195068, 1, -0.980469, 0.382568, 1, -0.923828, 0.555176, 1, -0.831055, 0.707031, 1, -0.707031, 0.831055, 1, -0.555176, 0.923828, 1, -0.382568, 0.980469, 1, -0.195068, 1, 1, 0, 0.980469, 1, 0.195068, 0.923828, 1, 0.382568, 0.831055, 1, 0.555176, 0.707031, 1, 0.707031, 0.555176, 1, 0.831055, 0.382568, 1, 0.923828, 0.195068, 1, 0.980469, 0, 1, 1, -0.195068, 1, 0.980469, -0.382568, 1, 0.923828, -0.555176, 1, 0.831055, -0.707031, 1, 0.707031, -0.831055, 1, 0.555176, -0.923828, 1, 0.382568, -0.980469, 1, 0.195068, -1, 1, 0, -0.980469, 1, -0.195068, -0.923828, 1, -0.382568, -0.831055, 1, -0.555176, -0.707031, 1, -0.707031, -0.555176, 1, -0.831055, -0.382568, 1, -0.923828, 0.382568, 1, -0.923828, 0.195068, 1, -0.980469, 0, 1, -1, -0.195068, 1, -0.980469, -0.382568, 1, -0.923828, -0.555176, 1, -0.831055, -0.707031, 1, -0.707031, -0.831055, 1, -0.555176, -0.980469, 1, -0.195068, -1, 1, 0, -0.980469, 1, 0.195068, -0.923828, 1, 0.382568, -0.831055, 1, 0.555176, -0.707031, 1, 0.707031, -0.555176, 1, 0.831055, -0.195068, 1, 0.980469, 0, 1, 1, 0.195068, 1, 0.980469, 0.382568, 1, 0.923828, 0.555176, 1, 0.831055, 0.707031, 1, 0.707031, 0.831055, 1, 0.555176, 0.980469, 1, 0.195068, 1, 1, 0, 0.980469, 1, -0.195068, 0.923828, 1, -0.382568, 0.831055, 1, -0.555176, 0.707031, 1, -0.707031, 0.555176, 1, -0.831055, -0.195068, 1, -0.980469, 0, 1, -1, -0.195068, -1, -0.980469, 0, -1, -1, 0.195068, -1, -0.980469, 0.382568, -1, -0.923828, 0.555176, -1, -0.831055, 0.707031, -1, -0.707031, 0.831055, -1, -0.555176, 0.923828, -1, -0.382568, 1, -1, 0, 0.980469, -1, 0.195068, 0.923828, -1, 0.382568, 0.831055, -1, 0.555176, 0.707031, -1, 0.707031, 0.555176, -1, 0.831055, 0.382568, -1, 0.923828, 0, -1, 1, -0.195068, -1, 0.980469, -0.382568, -1, 0.923828, -0.555176, -1, 0.831055, -0.707031, -1, 0.707031, -0.831055, -1, 0.555176, -0.923828, -1, 0.382568, -1, -1, 0, -0.980469, -1, -0.195068, -0.923828, -1, -0.382568, -0.831055, -1, -0.555176, -0.707031, -1, -0.707031, -0.555176, -1, -0.831055, -0.382568, -1, -0.923828 )

[sub_resource type="ConvexPolygonShape" id=6]

points = PoolVector3Array( 0, 1, -1, 0.195068, -1, -0.980469, 0, -1, -1, 0.195068, 1, -0.980469, 0.382568, -1, -0.923828, 0.195068, -1, -0.980469, 0.382568, 1, -0.923828, 0.555176, -1, -0.831055, 0.382568, -1, -0.923828, 0.555176, 1, -0.831055, 0.707031, -1, -0.707031, 0.555176, -1, -0.831055, 0.707031, 1, -0.707031, 0.831055, -1, -0.555176, 0.707031, -1, -0.707031, 0.831055, 1, -0.555176, 0.923828, -1, -0.382568, 0.831055, -1, -0.555176, 0.923828, 1, -0.382568, 0.980469, -1, -0.195068, 0.923828, -1, -0.382568, 0.980469, 1, -0.195068, 1, -1, 0, 0.980469, -1, -0.195068, 1, 1, 0, 0.980469, -1, 0.195068, 1, -1, 0, 0.980469, 1, 0.195068, 0.923828, -1, 0.382568, 0.980469, -1, 0.195068, 0.923828, 1, 0.382568, 0.831055, -1, 0.555176, 0.923828, -1, 0.382568, 0.831055, 1, 0.555176, 0.707031, -1, 0.707031, 0.831055, -1, 0.555176, 0.707031, 1, 0.707031, 0.555176, -1, 0.831055, 0.707031, -1, 0.707031, 0.555176, 1, 0.831055, 0.382568, -1, 0.923828, 0.555176, -1, 0.831055, 0.382568, 1, 0.923828, 0.195068, -1, 0.980469, 0.382568, -1, 0.923828, 0.195068, 1, 0.980469, 0, -1, 1, 0.195068, -1, 0.980469, 0, 1, 1, -0.195068, -1, 0.980469, 0, -1, 1, -0.195068, 1, 0.980469, -0.382568, -1, 0.923828, -0.195068, -1, 0.980469, -0.382568, 1, 0.923828, -0.555176, -1, 0.831055, -0.382568, -1, 0.923828, -0.555176, 1, 0.831055, -0.707031, -1, 0.707031, -0.555176, -1, 0.831055, -0.707031, 1, 0.707031, -0.831055, -1, 0.555176, -0.707031, -1, 0.707031, -0.831055, 1, 0.555176, -0.923828, -1, 0.382568, -0.831055, -1, 0.555176, -0.923828, 1, 0.382568, -0.980469, -1, 0.195068, -0.923828, -1, 0.382568, -0.980469, 1, 0.195068, -1, -1, 0, -0.980469, -1, 0.195068, -1, 1, 0, -0.980469, -1, -0.195068, -1, -1, 0, -0.980469, 1, -0.195068, -0.923828, -1, -0.382568, -0.980469, -1, -0.195068, -0.923828, 1, -0.382568, -0.831055, -1, -0.555176, -0.923828, -1, -0.382568, -0.831055, 1, -0.555176, -0.707031, -1, -0.707031, -0.831055, -1, -0.555176, -0.707031, 1, -0.707031, -0.555176, -1, -0.831055, -0.707031, -1, -0.707031, -0.555176, 1, -0.831055, -0.382568, -1, -0.923828, -0.555176, -1, -0.831055, -0.382568, 1, 0.923828, 0.923828, 1, 0.382568, -0.923828, 1, -0.382568, -0.382568, 1, -0.923828, -0.195068, -1, -0.980469, -0.382568, -1, -0.923828, -0.195068, 1, -0.980469, 0, -1, -1, -0.195068, -1, -0.980469, 0.195068, -1, 0.980469, -0.980469, -1, 0.195068, 0.980469, -1, -0.195068, 0.195068, 1, -0.980469, 0.382568, 1, -0.923828, 0.555176, 1, -0.831055, 0.707031, 1, -0.707031, 0.831055, 1, -0.555176, 0.923828, 1, -0.382568, 0.980469, 1, -0.195068, 1, 1, 0, 0.980469, 1, 0.195068, 0.923828, 1, 0.382568, 0.831055, 1, 0.555176, 0.707031, 1, 0.707031, 0.555176, 1, 0.831055, 0.382568, 1, 0.923828, 0.195068, 1, 0.980469, 0, 1, 1, -0.195068, 1, 0.980469, -0.382568, 1, 0.923828, -0.555176, 1, 0.831055, -0.707031, 1, 0.707031, -0.831055, 1, 0.555176, -0.923828, 1, 0.382568, -0.980469, 1, 0.195068, -1, 1, 0, -0.980469, 1, -0.195068, -0.923828, 1, -0.382568, -0.831055, 1, -0.555176, -0.707031, 1, -0.707031, -0.555176, 1, -0.831055, -0.382568, 1, -0.923828, 0.382568, 1, -0.923828, 0.195068, 1, -0.980469, 0, 1, -1, -0.195068, 1, -0.980469, -0.382568, 1, -0.923828, -0.555176, 1, -0.831055, -0.707031, 1, -0.707031, -0.831055, 1, -0.555176, -0.980469, 1, -0.195068, -1, 1, 0, -0.980469, 1, 0.195068, -0.923828, 1, 0.382568, -0.831055, 1, 0.555176, -0.707031, 1, 0.707031, -0.555176, 1, 0.831055, -0.195068, 1, 0.980469, 0, 1, 1, 0.195068, 1, 0.980469, 0.382568, 1, 0.923828, 0.555176, 1, 0.831055, 0.707031, 1, 0.707031, 0.831055, 1, 0.555176, 0.980469, 1, 0.195068, 1, 1, 0, 0.980469, 1, -0.195068, 0.923828, 1, -0.382568, 0.831055, 1, -0.555176, 0.707031, 1, -0.707031, 0.555176, 1, -0.831055, -0.195068, 1, -0.980469, 0, 1, -1, -0.195068, -1, -0.980469, 0, -1, -1, 0.195068, -1, -0.980469, 0.382568, -1, -0.923828, 0.555176, -1, -0.831055, 0.707031, -1, -0.707031, 0.831055, -1, -0.555176, 0.923828, -1, -0.382568, 1, -1, 0, 0.980469, -1, 0.195068, 0.923828, -1, 0.382568, 0.831055, -1, 0.555176, 0.707031, -1, 0.707031, 0.555176, -1, 0.831055, 0.382568, -1, 0.923828, 0, -1, 1, -0.195068, -1, 0.980469, -0.382568, -1, 0.923828, -0.555176, -1, 0.831055, -0.707031, -1, 0.707031, -0.831055, -1, 0.555176, -0.923828, -1, 0.382568, -1, -1, 0, -0.980469, -1, -0.195068, -0.923828, -1, -0.382568, -0.831055, -1, -0.555176, -0.707031, -1, -0.707031, -0.555176, -1, -0.831055, -0.382568, -1, -0.923828 )

[sub_resource type="Animation" id=7]

resource_name = "right"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Cube.1:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolFloatArray( 0, 0.2, 0.5 ),
"transitions": PoolFloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1.086, 1.15185, -1.40063 ), Vector3( 1.086, 1.03863, -1.40063 ), Vector3( 1.086, 1.15185, -1.40063 ) ]
}

[node name="Exporter" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Cube"]

input_ray_pickable = true
input_capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = true
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Cube/StaticBody"]

shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="Cube.1" parent="."]

material_override = ExtResource( 3 )

[node name="StaticBody" type="StaticBody" parent="Cube.1"]

input_ray_pickable = true
input_capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = true
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Cube.1/StaticBody"]

shape = SubResource( 2 )
trigger = true
_update_shape_index = 0

[node name="Quad" type="Quad" parent="Cube.1"]

transform = Transform( -0.999999, 0, -8.74228e-08, 0, 0.999999, 0, 8.74227e-08, 0, -1, 0, 1.04071, 0.932787 )
layers = 1
material_override = SubResource( 8 )
cast_shadow = 1
extra_cull_margin = 0.0
visible_in_all_rooms = false
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
axis = 1
size = Vector2( 2.5, 2 )
offset = Vector2( 0, 0 )
centered = true

[node name="Cylinder" parent="."]

material_override = ExtResource( 3 )

[node name="StaticBody" type="StaticBody" parent="Cylinder"]

input_ray_pickable = true
input_capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = true
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Cylinder/StaticBody"]

shape = SubResource( 3 )
trigger = true
_update_shape_index = 0

[node name="Cylinder.2" parent="."]

material_override = ExtResource( 3 )

[node name="StaticBody" type="StaticBody" parent="Cylinder.2"]

input_ray_pickable = true
input_capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = true
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Cylinder.2/StaticBody"]

shape = SubResource( 4 )
trigger = true
_update_shape_index = 0

[node name="Cylinder.4" parent="."]

material_override = ExtResource( 3 )

[node name="StaticBody" type="StaticBody" parent="Cylinder.4"]

input_ray_pickable = true
input_capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = true
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Cylinder.4/StaticBody"]

shape = SubResource( 5 )
trigger = true
_update_shape_index = 0

[node name="Cylinder.6" parent="."]

material_override = ExtResource( 3 )

[node name="StaticBody" type="StaticBody" parent="Cylinder.6"]

input_ray_pickable = true
input_capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = true
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Cylinder.6/StaticBody"]

shape = SubResource( 6 )
trigger = true
_update_shape_index = 0

[node name="cover" parent="."]

material_override = ExtResource( 5 )

[node name="bulb" type="OmniLight" parent="."]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.05032, 2.05093, 1.5916 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 4.0
light_negative = false
light_specular = 0.5
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_max_distance = 0.0
editor_only = false
omni_range = 5.0
omni_attenuation = 1.0
omni_shadow_mode = 0
omni_shadow_detail = 1

[node name="point" type="Camera" parent="."]

transform = Transform( -3.09086e-08, -0.707107, 0.707107, -1.28028e-08, 0.707107, 0.707107, -1, 1.28028e-08, -3.09086e-08, 2.2, 3.5, 0 )
projection = 0
fov = 60.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="spawns" type="Spatial" parent="."]

editor/display_folded = true

[node name="0" type="Position3D" parent="spawns"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.244547, 1.67247, 1.21558 )

[node name="1" type="Position3D" parent="spawns"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.244547, 1.67247, 0.414972 )

[node name="2" type="Position3D" parent="spawns"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.244547, 1.67247, -0.383759 )

[node name="3" type="Position3D" parent="spawns"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.244547, 1.67247, -1.20674 )

[node name="animation" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/right = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="input_event" from="Cube/StaticBody" to="." method="_on_body_input_event"]

[connection signal="input_event" from="Cube.1/StaticBody" to="." method="_on_panel_input_event"]

[connection signal="input_event" from="Cylinder/StaticBody" to="." method="_on_cylinder_input_event" binds= [ "Cylinder", Vector2( 0, 0 ) ]]

[connection signal="input_event" from="Cylinder.2/StaticBody" to="." method="_on_cylinder_input_event" binds= [ "Cylinder.2", Vector2( 1, 0 ) ]]

[connection signal="input_event" from="Cylinder.4/StaticBody" to="." method="_on_cylinder_input_event" binds= [ "Cylinder.4", Vector2( 2, 0 ) ]]

[connection signal="input_event" from="Cylinder.6/StaticBody" to="." method="_on_cylinder_input_event" binds= [ "Cylinder.6", Vector2( 3, 0 ) ]]


